--- a/core/schema/project/episodes/assets/asset_type/asset.yml
+++ b/core/schema/project/episodes/assets/asset_type/asset.yml
@@ -23,5 +23,5 @@ entity_type: "Asset"
 # (this is std shotgun API syntax)
 # any values starting with $ are resolved into path objects
 filters:
-    - { "path": "project", "relation": "is", "values": [ "$project" ] }
+    - { "path": "episode", "relation": "is", "values": [ "$episode" ] }
     - { "path": "sg_asset_type", "relation": "is", "values": [ "$asset_type"] }
