--- a/core/templates.yml
+++ b/core/templates.yml
@@ -27,6 +27,8 @@
 # {Shot}. The section below tells Sgtk which data types and formats to expect for each key.
 #
 keys:
+    Episode:
+        type: str
     Sequence:
         type: str
     Shot:
@@ -143,10 +145,11 @@ paths:
     # changes apply to all templates that use them.
     #
     # These don't require the standard formatting (with definition and root_name) because they
-    # will be set within each template that uses the alias.
-    shot_root: sequences/{Sequence}/{Shot}/{Step}
-    asset_root: assets/{sg_asset_type}/{Asset}/{Step}
-    sequence_root: sequences/{Sequence}
+    # will be set within each template that uses the alias.    
+    shot_root: episodes/{Episode}/sequences/{Sequence}/{Shot}/{Step}
+    asset_root: episodes/{Episode}/assets/{sg_asset_type}/{Asset}/{Step}
+    sequence_root: episodes/{Episode}/{Sequence}
+    episode_root: episodes/{Episode}
 
 
     ##########################################################################################
